<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/myCity" />
     
    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:ems="10" >

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_below="@+id/autoCompleteTextView1"
        android:layout_marginTop="5dp"
        android:text="@string/myCategory" />

    <CheckBox
        android:id="@+id/checkBoxFoodDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="5dp"
        android:text="@string/categoryFoodDrink" />

    <CheckBox
        android:id="@+id/checkBoxService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxFoodDrink"
        android:layout_below="@+id/checkBoxFoodDrink"       
        android:text="@string/categoryService" />

    <CheckBox
        android:id="@+id/checkBoxShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxService"
        android:layout_below="@+id/checkBoxService"
        android:text="@string/categoryShopping" />

    <CheckBox
        android:id="@+id/checkBoxCarTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxShopping"
        android:layout_below="@+id/checkBoxShopping"
        android:text="@string/categoryCarTransport" />
    
    <CheckBox
        android:id="@+id/CheckBoxRecreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxCarTransport"
        android:layout_below="@+id/checkBoxCarTransport"
        android:text="@string/categoryRecreation" />
    
    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_below="@+id/CheckBoxRecreation"
        android:layout_marginTop="5dp"
        android:text="@string/login" />
    
    
     <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_below="@+id/textViewLogin"
        android:layout_marginTop="5dp"
        android:text="@string/username" />
     
    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLogin"
        android:layout_below="@+id/textViewUser"
        android:layout_marginTop="10dp"
        android:ems="10" />
        
    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_below="@+id/editTextUser"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_below="@+id/textViewPassword"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:singleLine="true"
        android:inputType="textPassword" />

</RelativeLayout>