<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageViewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/blank_string"
        android:src="@drawable/blank" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/imageViewMap"
        android:layout_centerVertical="true"
        android:background="#000000" />

    <TextView
        android:id="@+id/textViewShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewMap"
        android:layout_margin="2dp"
        android:layout_marginLeft="4dp"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewShop"
        android:layout_margin="1dp"
        android:layout_marginLeft="4dp"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/rectimageBG"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@+id/textViewShop"
        android:layout_marginLeft="100dp"
        android:layout_toRightOf="@+id/textViewStreet"
        android:contentDescription="@string/blank_string"
        android:src="@drawable/rectangle_bg" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewShop"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textViewStreet"
        android:text="@+id/distance"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:width="40dp" />

    <TextView
        android:id="@+id/TextViewPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewStreet"
        android:layout_margin="1dp"
        android:layout_marginLeft="4dp"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewPostalCode"
        android:layout_alignBottom="@+id/TextViewPostalCode"
        android:layout_margin="1dp"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/TextViewPostalCode"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewPostalCode"
        android:layout_margin="4dp"
        android:clickable="true"
        android:onClick="call"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewWebSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTelephone"
        android:layout_margin="4dp"
        android:autoLink="web"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewOpeningHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewWebSite"
        android:layout_margin="4dp"
        android:singleLine="false"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/imageButtonShowMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:drawableRight="@android:drawable/ic_menu_mapmode"
            android:gravity="center|center_vertical"
            android:onClick="showMap"
            android:text="@string/map" />

        <Button
            android:id="@+id/imageButtonBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:drawableRight="@android:drawable/ic_menu_gallery"
            android:gravity="center|center_vertical"
            android:onClick="showBarcode"
            android:scrollHorizontally="true"
            android:text="@string/barcode" />
    </LinearLayout>

</RelativeLayout>